--- a/code.ipynb
+++ b/code.ipynb
@@ -1770,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "id": "f118dc3a-b79b-481a-81bd-39f3135ad9f7",
    "metadata": {},
    "outputs": [
@@ -1778,26 +1778,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9543973941368078\n"
+      "Fold 1: Accuracy = 0.9523\n",
+      "Fold 2: Accuracy = 0.9609\n",
+      "Fold 3: Accuracy = 0.9630\n",
+      "Fold 4: Accuracy = 0.9674\n",
+      "Fold 5: Accuracy = 0.9500\n",
+      "Fold 6: Accuracy = 0.9609\n",
+      "Fold 7: Accuracy = 0.9478\n",
+      "Fold 8: Accuracy = 0.9543\n",
+      "Fold 9: Accuracy = 0.9457\n",
+      "Fold 10: Accuracy = 0.9522\n",
+      "\n",
+      "Average Accuracy: 0.9554\n",
+      "Fold 10: Training Time = 1.5034 seconds\n",
+      "Fold 10: F-Measure = 0.9519\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "import numpy as np\n",
+    "import time\n",
     "\n",
+    "X = pd.DataFrame(X)\n",
+    "y = pd.Series(y)\n",
+    "\n",
+    "# Initialize StratifiedKFold with 10 folds\n",
     "skf = StratifiedKFold(n_splits=10, shuffle=True, random_state=42)\n",
     "\n",
+    "# Initialize a model (RandomForestClassifier)\n",
     "RF = RandomForestClassifier()\n",
     "\n",
-    "RF.fit(X_train, y_train)\n",
+    "# Perform Stratified Ten-Fold Cross-Validation\n",
+    "fold_accuracies = []\n",
     "\n",
-    "y_pred = model.predict(X_test)\n",
+    "for fold, (train_index, test_index) in enumerate(skf.split(X, y), 1):\n",
+    "    # Split the data into train and test for the current fold\n",
+    "    X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "    y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "    \n",
+    "    # Train the model\n",
+    "    start_time = time.time()  # Record start time\n",
+    "    RF.fit(X_train, y_train)  # Train the model\n",
+    "    end_time = time.time()  # Record end time\n",
+    "    \n",
+    "    # Predict on the test set\n",
+    "    y_pred = RF.predict(X_test)\n",
+    "    \n",
+    "    # Evaluate accuracy\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    fold_accuracies.append(accuracy)\n",
+    "    \n",
+    "    print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
     "\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "# f1 score\n",
+    "f_measure = f1_score(y_test, y_pred, average='weighted')  # Use 'weighted' for multi-class or imbalanced datasets\n",
     "\n",
-    "print(accuracy)"
+    "# train time\n",
+    "training_time = end_time - start_time  # Calculate training time\n",
+    "\n",
+    "# Print the average accuracy across folds\n",
+    "print(f\"\\nAverage Accuracy: {np.mean(fold_accuracies):.4f}\")\n",
+    "print(f\"Fold {fold}: Training Time = {training_time:.4f} seconds\")\n",
+    "print(f\"Fold {fold}: F-Measure = {f_measure:.4f}\")"
    ]
   },
   {
@@ -1806,30 +1852,6 @@
    "metadata": {},
    "source": [
     "# StratifiedKFold LogisticRegression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6af6f8e-d95a-4254-8b24-940e2a8adde9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "skf = StratifiedKFold(n_splits=10, shuffle=True, random_state=42)\n",
-    "\n",
-    "RF = RandomForestClassifier()\n",
-    "\n",
-    "RF.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "\n",
-    "print(accuracy)"
    ]
   },
   {
@@ -1989,8 +2011,9 @@
     "from sklearn.datasets import make_classification\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
     "import numpy as np\n",
+    "import time\n",
     "\n",
     "X = pd.DataFrame(X)\n",
     "y = pd.Series(y)\n",
@@ -2010,7 +2033,9 @@
     "    y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
     "    \n",
     "    # Train the model\n",
+    "    start_time = time.time()  # Record start time\n",
     "    LR.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
     "    \n",
     "    # Predict on the test set\n",
     "    y_pred = LR.predict(X_test)\n",
@@ -2021,8 +2046,16 @@
     "    \n",
     "    print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
     "\n",
+    "# f1 score\n",
+    "f_measure = f1_score(y_test, y_pred, average='weighted')  # Use 'weighted' for multi-class or imbalanced datasets\n",
+    "\n",
+    "# train time\n",
+    "training_time = end_time - start_time  # Calculate training time\n",
+    "\n",
     "# Print the average accuracy across folds\n",
-    "print(f\"\\nAverage Accuracy: {np.mean(fold_accuracies):.4f}\")\n"
+    "print(f\"\\nAverage Accuracy: {np.mean(fold_accuracies):.4f}\")\n",
+    "print(f\"Fold {fold}: Training Time = {training_time:.4f} seconds\")\n",
+    "print(f\"Fold {fold}: F-Measure = {f_measure:.4f}\")"
    ]
   },
   {
