test for all the models on the same model

--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "id": "2639fb3d-a088-45da-a6ec-ac91ac0d4da6",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "(4601, 58)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 105,
    "id": "fbec24e7-c363-481e-9c5f-f5604be799ec",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "((4601, 57), (4601,))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 107,
    "id": "1b759c2b-2e1c-490b-8cf2-d2fa7065d47f",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 110,
    "id": "85c52d3f-cfe6-44e9-805e-93cab8e925f5",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        "((3680, 57), (921, 57))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,6 +112,171 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f687f20-847c-472c-a190-b1121c143b64",
+   "metadata": {},
+   "source": [
+    "# StratifiedKFold for all the models on the same fold \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "26e53da4-b386-492e-bb51-4563ebfae199",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Evaluating Random Forest...\n",
+      "\n",
+      "Fold 1: F1-Measure = 0.9478\n",
+      "\n",
+      "Fold 2: F1-Measure = 0.9630\n",
+      "\n",
+      "Fold 3: F1-Measure = 0.9586\n",
+      "\n",
+      "Fold 4: F1-Measure = 0.9674\n",
+      "\n",
+      "Fold 5: F1-Measure = 0.9435\n",
+      "\n",
+      "Fold 6: F1-Measure = 0.9630\n",
+      "\n",
+      "Fold 7: F1-Measure = 0.9520\n",
+      "\n",
+      "Fold 8: F1-Measure = 0.9563\n",
+      "\n",
+      "Fold 9: F1-Measure = 0.9475\n",
+      "\n",
+      "Fold 10: F1-Measure = 0.9497\n",
+      "\n",
+      "Random Forest - Average F1-Measure: 0.9549\n",
+      "Random Forest - F1-Measure stdev: 0.0076\n",
+      "\n",
+      "Evaluating Logistic Regression...\n",
+      "\n",
+      "Fold 1: F1-Measure = 0.9152\n",
+      "\n",
+      "Fold 2: F1-Measure = 0.9214\n",
+      "\n",
+      "Fold 3: F1-Measure = 0.9280\n",
+      "\n",
+      "Fold 4: F1-Measure = 0.9325\n",
+      "\n",
+      "Fold 5: F1-Measure = 0.9088\n",
+      "\n",
+      "Fold 6: F1-Measure = 0.9369\n",
+      "\n",
+      "Fold 7: F1-Measure = 0.9345\n",
+      "\n",
+      "Fold 8: F1-Measure = 0.9256\n",
+      "\n",
+      "Fold 9: F1-Measure = 0.9385\n",
+      "\n",
+      "Fold 10: F1-Measure = 0.9104\n",
+      "\n",
+      "Logistic Regression - Average F1-Measure: 0.9252\n",
+      "Logistic Regression - F1-Measure stdev: 0.0103\n",
+      "\n",
+      "Evaluating XGBoost...\n",
+      "\n",
+      "Fold 1: F1-Measure = 0.9458\n",
+      "\n",
+      "Fold 2: F1-Measure = 0.9586\n",
+      "\n",
+      "Fold 3: F1-Measure = 0.9588\n",
+      "\n",
+      "Fold 4: F1-Measure = 0.9608\n",
+      "\n",
+      "Fold 5: F1-Measure = 0.9545\n",
+      "\n",
+      "Fold 6: F1-Measure = 0.9565\n",
+      "\n",
+      "Fold 7: F1-Measure = 0.9500\n",
+      "\n",
+      "Fold 8: F1-Measure = 0.9588\n",
+      "\n",
+      "Fold 9: F1-Measure = 0.9586\n",
+      "\n",
+      "Fold 10: F1-Measure = 0.9454\n",
+      "\n",
+      "XGBoost - Average F1-Measure: 0.9548\n",
+      "XGBoost - F1-Measure stdev: 0.0054\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "X = pd.DataFrame(X)\n",
+    "y = pd.Series(y)\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits=10, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Define the models\n",
+    "models = {\n",
+    "    \"Random Forest\": RandomForestClassifier(),\n",
+    "    \"Logistic Regression\": LogisticRegression(),\n",
+    "    \"XGBoost\": XGBClassifier(eval_metric='logloss')\n",
+    "}\n",
+    "\n",
+    "# Initialize dictionaries to store results for each model\n",
+    "results = {model_name: {\"accuracies\": [], \"f1_scores\": [], \"train_times\": []} for model_name in models}\n",
+    "\n",
+    "# Perform Stratified K-Fold Cross-Validation for each model\n",
+    "for model_name, model in models.items():\n",
+    "    print(f\"\\nEvaluating {model_name}...\\n\")\n",
+    "    \n",
+    "    for fold, (train_index, test_index) in enumerate(skf.split(X, y), 1):\n",
+    "        # Split the data into train and test for the current fold\n",
+    "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "        \n",
+    "        # Train the model\n",
+    "        start_time = time.time()  # Record start time\n",
+    "        model.fit(X_train, y_train)  # Train the model\n",
+    "        end_time = time.time()  # Record end time\n",
+    "        \n",
+    "        training_time = end_time - start_time  # Calculate training time for the current fold\n",
+    "        \n",
+    "        # Predict on the test set\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        \n",
+    "        # Evaluate accuracy\n",
+    "        accuracy = accuracy_score(y_test, y_pred)\n",
+    "        results[model_name][\"accuracies\"].append(accuracy)\n",
+    "        \n",
+    "        # Evaluate F-measure\n",
+    "        f1 = f1_score(y_test, y_pred, average='weighted')  # Use weighted for multi-class or imbalanced datasets\n",
+    "        results[model_name][\"f1_scores\"].append(f1)\n",
+    "        \n",
+    "        # Record training time\n",
+    "        results[model_name][\"train_times\"].append(training_time)\n",
+    "        \n",
+    "        # Print results for the fold\n",
+    "        # print(f\"Fold {fold}: Training Time = {training_time:.4f} seconds\")\n",
+    "        # print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
+    "        print(f\"Fold {fold}: F1-Measure = {f1:.4f}\")\n",
+    "        \n",
+    "    \n",
+    "    # Print average results for the model\n",
+    "    # print(f\"{model_name} - Average Accuracy: {np.mean(results[model_name]['accuracies']):.4f}\")\n",
+    "    print(f\"{model_name} - Average F1-Measure: {np.mean(results[model_name]['f1_scores']):.4f}\")\n",
+    "    print(f\"{model_name} - F1-Measure stdev: {np.std(results[model_name]['f1_scores']):.4f}\")\n",
+    "    # {np.std(fold_f1_scores):.4f}\n",
+    "    # print(f\"{model_name} - Average Training Time: {np.mean(results[model_name]['train_times']):.4f} seconds\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b2b6c11b-1472-422b-9a49-32a545325d32",
    "metadata": {},
    "source": [
@@ -120,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 119,
    "id": "f118dc3a-b79b-481a-81bd-39f3135ad9f7",
    "metadata": {},
    "outputs": [
@@ -128,61 +293,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 1: Training Time = 2.0170\n",
-      "Fold 1: Accuracy = 0.9479\n",
-      "Fold 1: F1-Measure = 0.9337\n",
-      "\n",
-      "\n",
-      "Fold 2: Training Time = 1.8583\n",
-      "Fold 2: Accuracy = 0.9630\n",
-      "Fold 2: F1-Measure = 0.9524\n",
-      "\n",
-      "\n",
-      "Fold 3: Training Time = 1.4381\n",
-      "Fold 3: Accuracy = 0.9630\n",
-      "Fold 3: F1-Measure = 0.9529\n",
-      "\n",
-      "\n",
-      "Fold 4: Training Time = 1.3756\n",
-      "Fold 4: Accuracy = 0.9652\n",
-      "Fold 4: F1-Measure = 0.9553\n",
-      "\n",
-      "\n",
-      "Fold 5: Training Time = 1.4010\n",
-      "Fold 5: Accuracy = 0.9522\n",
-      "Fold 5: F1-Measure = 0.9389\n",
-      "\n",
-      "\n",
-      "Fold 6: Training Time = 1.3713\n",
-      "Fold 6: Accuracy = 0.9652\n",
-      "Fold 6: F1-Measure = 0.9553\n",
-      "\n",
-      "\n",
-      "Fold 7: Training Time = 1.3959\n",
-      "Fold 7: Accuracy = 0.9565\n",
-      "Fold 7: F1-Measure = 0.9441\n",
-      "\n",
-      "\n",
-      "Fold 8: Training Time = 1.7361\n",
-      "Fold 8: Accuracy = 0.9565\n",
-      "Fold 8: F1-Measure = 0.9438\n",
-      "\n",
-      "\n",
-      "Fold 9: Training Time = 1.4938\n",
-      "Fold 9: Accuracy = 0.9457\n",
-      "Fold 9: F1-Measure = 0.9292\n",
-      "\n",
-      "\n",
-      "Fold 10: Training Time = 1.8181\n",
-      "Fold 10: Accuracy = 0.9457\n",
-      "Fold 10: F1-Measure = 0.9292\n",
-      "\n",
-      "\n",
-      "Average Training Time: 1.5905\n",
-      "Average Accuracy: 0.9561\n",
-      "Standard Deviation of Accuracy: 0.0075\n",
-      "Average F1-Measure: 0.9435\n",
-      "Standard Deviation of F1-Measure: 0.0099\n"
+      "Fold 1: F1-Measure = 0.9363\n",
+      "Fold 2: F1-Measure = 0.9497\n",
+      "Fold 3: F1-Measure = 0.9611\n",
+      "Fold 4: F1-Measure = 0.9497\n",
+      "Fold 5: F1-Measure = 0.9227\n",
+      "Fold 6: F1-Measure = 0.9551\n",
+      "Fold 7: F1-Measure = 0.9408\n",
+      "Fold 8: F1-Measure = 0.9382\n",
+      "Fold 9: F1-Measure = 0.9270\n",
+      "Fold 10: F1-Measure = 0.9348\n",
+      "[0.9362880886426593, 0.9497206703910615, 0.9611111111111111, 0.9497206703910615, 0.9226519337016574, 0.9550561797752809, 0.9408450704225352, 0.9382022471910112, 0.9269662921348315, 0.9348441926345609]\n",
+      "Standard Deviation of F1-Measure: 0.0116\n"
      ]
     }
    ],
@@ -202,6 +324,10 @@
     "\n",
     "# Initialize a model (RandomForestClassifier)\n",
     "RF = RandomForestClassifier()\n",
+    "LR = LogisticRegression()\n",
+    "XGB = XGBClassifier(eval_metric='logloss')  \n",
+    "\n",
+    "\n",
     "\n",
     "# Perform Stratified Ten-Fold Cross-Validation\n",
     "fold_accuracies = []\n",
@@ -232,16 +358,17 @@
     "    f1 = f1_score(y_test, y_pred) \n",
     "    fold_f1_scores.append(f1)\n",
     "\n",
-    "    print(f\"Fold {fold}: Training Time = {training_time:.4f}\")\n",
-    "    print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
+    "    # print(f\"Fold {fold}: Training Time = {training_time:.4f}\")\n",
+    "    # print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
     "    print(f\"Fold {fold}: F1-Measure = {f1:.4f}\")\n",
-    "    print ('\\n')\n",
+    "    # print ('\\n')\n",
     "\n",
     "# Print the average accuracy across folds\n",
-    "print(f\"Average Training Time: {np.mean(fold_train_times):.4f}\")\n",
-    "print(f\"Average Accuracy: {np.mean(fold_accuracies):.4f}\")\n",
-    "print(f\"Standard Deviation of Accuracy: {np.std(fold_accuracies):.4f}\")\n",
-    "print(f\"Average F1-Measure: {np.mean(fold_f1_scores):.4f}\")\n",
+    "# print(f\"Average Training Time: {np.mean(fold_train_times):.4f}\")\n",
+    "# print(f\"Average Accuracy: {np.mean(fold_accuracies):.4f}\")\n",
+    "# print(f\"Standard Deviation of Accuracy: {np.std(fold_accuracies):.4f}\")\n",
+    "# print(f\"Average F1-Measure: {(fold_f1_scores):.4f}\")\n",
+    "print(fold_f1_scores)\n",
     "print(f\"Standard Deviation of F1-Measure: {np.std(fold_f1_scores):.4f}\")"
    ]
   },
@@ -255,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 96,
    "id": "ad545df0-7681-4dc7-a584-a48d7a946e80",
    "metadata": {},
    "outputs": [
@@ -263,59 +390,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 1: Training Time = 0.0672\n",
-      "Fold 1: Accuracy = 0.9154\n",
       "Fold 1: F1-Measure = 0.8914\n",
-      "\n",
-      "\n",
-      "Fold 2: Training Time = 0.0503\n",
-      "Fold 2: Accuracy = 0.9217\n",
       "Fold 2: F1-Measure = 0.8989\n",
-      "\n",
-      "\n",
-      "Fold 3: Training Time = 0.0523\n",
-      "Fold 3: Accuracy = 0.9283\n",
       "Fold 3: F1-Measure = 0.9076\n",
-      "\n",
-      "\n",
-      "Fold 4: Training Time = 0.0548\n",
-      "Fold 4: Accuracy = 0.9326\n",
       "Fold 4: F1-Measure = 0.9136\n",
-      "\n",
-      "\n",
-      "Fold 5: Training Time = 0.0567\n",
-      "Fold 5: Accuracy = 0.9087\n",
       "Fold 5: F1-Measure = 0.8846\n",
-      "\n",
-      "\n",
-      "Fold 6: Training Time = 0.0548\n",
-      "Fold 6: Accuracy = 0.9370\n",
       "Fold 6: F1-Measure = 0.9197\n",
-      "\n",
-      "\n",
-      "Fold 7: Training Time = 0.0485\n",
-      "Fold 7: Accuracy = 0.9348\n",
       "Fold 7: F1-Measure = 0.9153\n",
-      "\n",
-      "\n",
-      "Fold 8: Training Time = 0.0464\n",
-      "Fold 8: Accuracy = 0.9261\n",
       "Fold 8: F1-Measure = 0.9029\n",
-      "\n",
-      "\n",
-      "Fold 9: Training Time = 0.0342\n",
-      "Fold 9: Accuracy = 0.9391\n",
       "Fold 9: F1-Measure = 0.9186\n",
-      "\n",
-      "\n",
-      "Fold 10: Training Time = 0.0615\n",
-      "Fold 10: Accuracy = 0.9109\n",
       "Fold 10: F1-Measure = 0.8839\n",
-      "\n",
-      "\n",
-      "Average Training Time: 0.0527\n",
-      "Average Accuracy: 0.9255\n",
-      "Standard Deviation of Accuracy: 0.0104\n",
       "Average F1-Measure: 0.9036\n",
       "Standard Deviation of F1-Measure: 0.0129\n"
      ]
@@ -367,15 +451,15 @@
     "    f1 = f1_score(y_test, y_pred) \n",
     "    fold_f1_scores.append(f1)\n",
     "\n",
-    "    print(f\"Fold {fold}: Training Time = {training_time:.4f}\")\n",
-    "    print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
+    "    # print(f\"Fold {fold}: Training Time = {training_time:.4f}\")\n",
+    "    # print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
     "    print(f\"Fold {fold}: F1-Measure = {f1:.4f}\")\n",
-    "    print ('\\n')\n",
+    "    # print ('\\n')\n",
     "\n",
     "# Print the average accuracy across folds\n",
-    "print(f\"Average Training Time: {np.mean(fold_train_times):.4f}\")\n",
-    "print(f\"Average Accuracy: {np.mean(fold_accuracies):.4f}\")\n",
-    "print(f\"Standard Deviation of Accuracy: {np.std(fold_accuracies):.4f}\")\n",
+    "# print(f\"Average Training Time: {np.mean(fold_train_times):.4f}\")\n",
+    "# print(f\"Average Accuracy: {np.mean(fold_accuracies):.4f}\")\n",
+    "# print(f\"Standard Deviation of Accuracy: {np.std(fold_accuracies):.4f}\")\n",
     "print(f\"Average F1-Measure: {np.mean(fold_f1_scores):.4f}\")\n",
     "print(f\"Standard Deviation of F1-Measure: {np.std(fold_f1_scores):.4f}\")"
    ]
@@ -1124,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 99,
    "id": "cf5fe77c-552f-4b02-ac72-4852e1a2a855",
    "metadata": {},
    "outputs": [
@@ -1132,59 +1216,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 1: Training Time = 0.5243\n",
-      "Fold 1: Accuracy = 0.9458\n",
       "Fold 1: F1-Measure = 0.9315\n",
-      "\n",
-      "\n",
-      "Fold 2: Training Time = 0.5189\n",
-      "Fold 2: Accuracy = 0.9587\n",
       "Fold 2: F1-Measure = 0.9471\n",
-      "\n",
-      "\n",
-      "Fold 3: Training Time = 0.5081\n",
-      "Fold 3: Accuracy = 0.9587\n",
       "Fold 3: F1-Measure = 0.9482\n",
-      "\n",
-      "\n",
-      "Fold 4: Training Time = 0.5507\n",
-      "Fold 4: Accuracy = 0.9609\n",
       "Fold 4: F1-Measure = 0.9500\n",
-      "\n",
-      "\n",
-      "Fold 5: Training Time = 0.5320\n",
-      "Fold 5: Accuracy = 0.9543\n",
       "Fold 5: F1-Measure = 0.9428\n",
-      "\n",
-      "\n",
-      "Fold 6: Training Time = 0.4336\n",
-      "Fold 6: Accuracy = 0.9565\n",
       "Fold 6: F1-Measure = 0.9444\n",
-      "\n",
-      "\n",
-      "Fold 7: Training Time = 0.5458\n",
-      "Fold 7: Accuracy = 0.9500\n",
       "Fold 7: F1-Measure = 0.9363\n",
-      "\n",
-      "\n",
-      "Fold 8: Training Time = 0.5417\n",
-      "Fold 8: Accuracy = 0.9587\n",
       "Fold 8: F1-Measure = 0.9479\n",
-      "\n",
-      "\n",
-      "Fold 9: Training Time = 0.4947\n",
-      "Fold 9: Accuracy = 0.9587\n",
       "Fold 9: F1-Measure = 0.9471\n",
-      "\n",
-      "\n",
-      "Fold 10: Training Time = 0.4903\n",
-      "Fold 10: Accuracy = 0.9457\n",
       "Fold 10: F1-Measure = 0.9292\n",
-      "\n",
-      "\n",
-      "Average Training Time: 0.5140\n",
-      "Average Accuracy: 0.9548\n",
-      "Standard Deviation of Accuracy: 0.0054\n",
       "Average F1-Measure: 0.9425\n",
       "Standard Deviation of F1-Measure: 0.0071\n"
      ]
@@ -1236,15 +1277,15 @@
     "    f1 = f1_score(y_test, y_pred) \n",
     "    fold_f1_scores.append(f1)\n",
     "\n",
-    "    print(f\"Fold {fold}: Training Time = {training_time:.4f}\")\n",
-    "    print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
+    "    # print(f\"Fold {fold}: Training Time = {training_time:.4f}\")\n",
+    "    # print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
     "    print(f\"Fold {fold}: F1-Measure = {f1:.4f}\")\n",
-    "    print ('\\n')\n",
+    "    # print ('\\n')\n",
     "\n",
     "# Print the average accuracy across folds\n",
-    "print(f\"Average Training Time: {np.mean(fold_train_times):.4f}\")\n",
-    "print(f\"Average Accuracy: {np.mean(fold_accuracies):.4f}\")\n",
-    "print(f\"Standard Deviation of Accuracy: {np.std(fold_accuracies):.4f}\")\n",
+    "# print(f\"Average Training Time: {np.mean(fold_train_times):.4f}\")\n",
+    "# print(f\"Average Accuracy: {np.mean(fold_accuracies):.4f}\")\n",
+    "# print(f\"Standard Deviation of Accuracy: {np.std(fold_accuracies):.4f}\")\n",
     "print(f\"Average F1-Measure: {np.mean(fold_f1_scores):.4f}\")\n",
     "print(f\"Standard Deviation of F1-Measure: {np.std(fold_f1_scores):.4f}\")"
    ]
