--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 127,
    "id": "2639fb3d-a088-45da-a6ec-ac91ac0d4da6",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "(4601, 58)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 130,
    "id": "fbec24e7-c363-481e-9c5f-f5604be799ec",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "((4601, 57), (4601,))"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "sc = StandardScaler()\n",
-    "X = sc.fit_transform(X)\n",
+    "# X = sc.fit_transform(X)\n",
     "\n",
     "# print(X[:5])"
    ]
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 132,
    "id": "85c52d3f-cfe6-44e9-805e-93cab8e925f5",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        "((3680, 57), (921, 57))"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "26e53da4-b386-492e-bb51-4563ebfae199",
    "metadata": {},
    "outputs": [
@@ -131,78 +131,122 @@
       "\n",
       "Evaluating Random Forest...\n",
       "\n",
-      "Fold 1: F1-Measure = 0.9478\n",
+      "Fold 1: Training Time = 2.3441 seconds\n",
+      "Fold 1: Accuracy = 0.9458\n",
+      "Fold 1: F1-Measure = 0.9457\n",
       "\n",
-      "Fold 2: F1-Measure = 0.9630\n",
       "\n",
-      "Fold 3: F1-Measure = 0.9586\n",
+      "Fold 2: Training Time = 2.5368 seconds\n",
+      "Fold 2: Accuracy = 0.9565\n",
+      "Fold 2: F1-Measure = 0.9564\n",
       "\n",
-      "Fold 4: F1-Measure = 0.9674\n",
       "\n",
-      "Fold 5: F1-Measure = 0.9435\n",
+      "Fold 3: Training Time = 2.7043 seconds\n",
+      "Fold 3: Accuracy = 0.9609\n",
+      "Fold 3: F1-Measure = 0.9608\n",
       "\n",
-      "Fold 6: F1-Measure = 0.9630\n",
       "\n",
-      "Fold 7: F1-Measure = 0.9520\n",
+      "Fold 4: Training Time = 3.7515 seconds\n",
+      "Fold 4: Accuracy = 0.9630\n",
+      "Fold 4: F1-Measure = 0.9630\n",
       "\n",
+      "\n",
+      "Fold 5: Training Time = 4.3616 seconds\n",
+      "Fold 5: Accuracy = 0.9457\n",
+      "Fold 5: F1-Measure = 0.9456\n",
+      "\n",
+      "\n",
+      "Fold 6: Training Time = 4.3024 seconds\n",
+      "Fold 6: Accuracy = 0.9587\n",
+      "Fold 6: F1-Measure = 0.9586\n",
+      "\n",
+      "\n",
+      "Fold 7: Training Time = 3.9947 seconds\n",
+      "Fold 7: Accuracy = 0.9522\n",
+      "Fold 7: F1-Measure = 0.9521\n",
+      "\n",
+      "\n",
+      "Fold 8: Training Time = 4.7785 seconds\n",
+      "Fold 8: Accuracy = 0.9565\n",
       "Fold 8: F1-Measure = 0.9563\n",
       "\n",
-      "Fold 9: F1-Measure = 0.9475\n",
       "\n",
-      "Fold 10: F1-Measure = 0.9497\n",
+      "Fold 9: Training Time = 4.2598 seconds\n",
+      "Fold 9: Accuracy = 0.9522\n",
+      "Fold 9: F1-Measure = 0.9520\n",
       "\n",
-      "Random Forest - Average F1-Measure: 0.9549\n",
-      "Random Forest - F1-Measure stdev: 0.0076\n",
+      "\n",
+      "Fold 10: Training Time = 3.7605 seconds\n",
+      "Fold 10: Accuracy = 0.9522\n",
+      "Fold 10: F1-Measure = 0.9519\n",
+      "\n",
+      "\n",
+      "Random Forest - Average Accuracy: 0.9544\n",
+      "Random Forest - Average F1-Measure: 0.9542\n",
+      "Random Forest - F1-Measure stdev: 0.0056\n",
+      "Random Forest - Average Training Time: 3.6794 seconds\n",
+      "\n",
       "\n",
       "Evaluating Logistic Regression...\n",
       "\n",
-      "Fold 1: F1-Measure = 0.9152\n",
+      "Fold 1: Training Time = 0.2886 seconds\n",
+      "Fold 1: Accuracy = 0.9132\n",
+      "Fold 1: F1-Measure = 0.9131\n",
       "\n",
+      "\n",
+      "Fold 2: Training Time = 0.3610 seconds\n",
+      "Fold 2: Accuracy = 0.9217\n",
       "Fold 2: F1-Measure = 0.9214\n",
       "\n",
-      "Fold 3: F1-Measure = 0.9280\n",
       "\n",
-      "Fold 4: F1-Measure = 0.9325\n",
+      "Fold 3: Training Time = 0.1704 seconds\n",
+      "Fold 3: Accuracy = 0.9326\n",
+      "Fold 3: F1-Measure = 0.9324\n",
       "\n",
-      "Fold 5: F1-Measure = 0.9088\n",
       "\n",
-      "Fold 6: F1-Measure = 0.9369\n",
+      "Fold 4: Training Time = 0.6721 seconds\n",
+      "Fold 4: Accuracy = 0.9370\n",
+      "Fold 4: F1-Measure = 0.9368\n",
       "\n",
-      "Fold 7: F1-Measure = 0.9345\n",
       "\n",
-      "Fold 8: F1-Measure = 0.9256\n",
+      "Fold 5: Training Time = 0.3669 seconds\n",
+      "Fold 5: Accuracy = 0.9130\n",
+      "Fold 5: F1-Measure = 0.9131\n",
       "\n",
-      "Fold 9: F1-Measure = 0.9385\n",
       "\n",
-      "Fold 10: F1-Measure = 0.9104\n",
+      "Fold 6: Training Time = 0.2264 seconds\n",
+      "Fold 6: Accuracy = 0.9370\n",
+      "Fold 6: F1-Measure = 0.9370\n",
       "\n",
-      "Logistic Regression - Average F1-Measure: 0.9252\n",
-      "Logistic Regression - F1-Measure stdev: 0.0103\n",
+      "\n",
+      "Fold 7: Training Time = 0.6002 seconds\n",
+      "Fold 7: Accuracy = 0.9348\n",
+      "Fold 7: F1-Measure = 0.9346\n",
+      "\n",
+      "\n",
+      "Fold 8: Training Time = 0.1222 seconds\n",
+      "Fold 8: Accuracy = 0.9326\n",
+      "Fold 8: F1-Measure = 0.9324\n",
+      "\n",
+      "\n",
+      "Fold 9: Training Time = 0.1842 seconds\n",
+      "Fold 9: Accuracy = 0.9370\n",
+      "Fold 9: F1-Measure = 0.9362\n",
+      "\n",
+      "\n",
+      "Fold 10: Training Time = 0.3873 seconds\n",
+      "Fold 10: Accuracy = 0.9152\n",
+      "Fold 10: F1-Measure = 0.9149\n",
+      "\n",
+      "\n",
+      "Logistic Regression - Average Accuracy: 0.9274\n",
+      "Logistic Regression - Average F1-Measure: 0.9272\n",
+      "Logistic Regression - F1-Measure stdev: 0.0098\n",
+      "Logistic Regression - Average Training Time: 0.3379 seconds\n",
+      "\n",
       "\n",
       "Evaluating XGBoost...\n",
-      "\n",
-      "Fold 1: F1-Measure = 0.9458\n",
-      "\n",
-      "Fold 2: F1-Measure = 0.9586\n",
-      "\n",
-      "Fold 3: F1-Measure = 0.9588\n",
-      "\n",
-      "Fold 4: F1-Measure = 0.9608\n",
-      "\n",
-      "Fold 5: F1-Measure = 0.9545\n",
-      "\n",
-      "Fold 6: F1-Measure = 0.9565\n",
-      "\n",
-      "Fold 7: F1-Measure = 0.9500\n",
-      "\n",
-      "Fold 8: F1-Measure = 0.9588\n",
-      "\n",
-      "Fold 9: F1-Measure = 0.9586\n",
-      "\n",
-      "Fold 10: F1-Measure = 0.9454\n",
-      "\n",
-      "XGBoost - Average F1-Measure: 0.9548\n",
-      "XGBoost - F1-Measure stdev: 0.0054\n"
+      "\n"
      ]
     }
    ],
@@ -224,7 +268,7 @@
     "# Define the models\n",
     "models = {\n",
     "    \"Random Forest\": RandomForestClassifier(),\n",
-    "    \"Logistic Regression\": LogisticRegression(),\n",
+    "    \"Logistic Regression\": LogisticRegression(max_iter=1000, solver='liblinear'),\n",
     "    \"XGBoost\": XGBClassifier(eval_metric='logloss')\n",
     "}\n",
     "\n",
@@ -262,17 +306,17 @@
     "        results[model_name][\"train_times\"].append(training_time)\n",
     "        \n",
     "        # Print results for the fold\n",
-    "        # print(f\"Fold {fold}: Training Time = {training_time:.4f} seconds\")\n",
-    "        # print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
+    "        print(f\"Fold {fold}: Training Time = {training_time:.4f} seconds\")\n",
+    "        print(f\"Fold {fold}: Accuracy = {accuracy:.4f}\")\n",
     "        print(f\"Fold {fold}: F1-Measure = {f1:.4f}\")\n",
+    "        print(\"\\n\")\n",
     "        \n",
     "    \n",
     "    # Print average results for the model\n",
-    "    # print(f\"{model_name} - Average Accuracy: {np.mean(results[model_name]['accuracies']):.4f}\")\n",
+    "    print(f\"{model_name} - Average Accuracy: {np.mean(results[model_name]['accuracies']):.4f}\")\n",
     "    print(f\"{model_name} - Average F1-Measure: {np.mean(results[model_name]['f1_scores']):.4f}\")\n",
     "    print(f\"{model_name} - F1-Measure stdev: {np.std(results[model_name]['f1_scores']):.4f}\")\n",
-    "    # {np.std(fold_f1_scores):.4f}\n",
-    "    # print(f\"{model_name} - Average Training Time: {np.mean(results[model_name]['train_times']):.4f} seconds\\n\")\n"
+    "    print(f\"{model_name} - Average Training Time: {np.mean(results[model_name]['train_times']):.4f} seconds\\n\")\n"
    ]
   },
   {
