--- a/code.ipynb
+++ b/code.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "26e53da4-b386-492e-bb51-4563ebfae199",
    "metadata": {},
    "outputs": [
@@ -246,6 +246,61 @@
       "\n",
       "\n",
       "Evaluating XGBoost...\n",
+      "\n",
+      "Fold 1: Training Time = 0.9954 seconds\n",
+      "Fold 1: Accuracy = 0.9458\n",
+      "Fold 1: F1-Measure = 0.9458\n",
+      "\n",
+      "\n",
+      "Fold 2: Training Time = 1.1689 seconds\n",
+      "Fold 2: Accuracy = 0.9587\n",
+      "Fold 2: F1-Measure = 0.9586\n",
+      "\n",
+      "\n",
+      "Fold 3: Training Time = 1.1789 seconds\n",
+      "Fold 3: Accuracy = 0.9587\n",
+      "Fold 3: F1-Measure = 0.9588\n",
+      "\n",
+      "\n",
+      "Fold 4: Training Time = 1.2175 seconds\n",
+      "Fold 4: Accuracy = 0.9609\n",
+      "Fold 4: F1-Measure = 0.9608\n",
+      "\n",
+      "\n",
+      "Fold 5: Training Time = 1.4139 seconds\n",
+      "Fold 5: Accuracy = 0.9543\n",
+      "Fold 5: F1-Measure = 0.9545\n",
+      "\n",
+      "\n",
+      "Fold 6: Training Time = 1.1704 seconds\n",
+      "Fold 6: Accuracy = 0.9565\n",
+      "Fold 6: F1-Measure = 0.9565\n",
+      "\n",
+      "\n",
+      "Fold 7: Training Time = 1.2961 seconds\n",
+      "Fold 7: Accuracy = 0.9500\n",
+      "Fold 7: F1-Measure = 0.9500\n",
+      "\n",
+      "\n",
+      "Fold 8: Training Time = 1.2046 seconds\n",
+      "Fold 8: Accuracy = 0.9587\n",
+      "Fold 8: F1-Measure = 0.9588\n",
+      "\n",
+      "\n",
+      "Fold 9: Training Time = 1.2134 seconds\n",
+      "Fold 9: Accuracy = 0.9587\n",
+      "Fold 9: F1-Measure = 0.9586\n",
+      "\n",
+      "\n",
+      "Fold 10: Training Time = 1.4044 seconds\n",
+      "Fold 10: Accuracy = 0.9457\n",
+      "Fold 10: F1-Measure = 0.9454\n",
+      "\n",
+      "\n",
+      "XGBoost - Average Accuracy: 0.9548\n",
+      "XGBoost - Average F1-Measure: 0.9548\n",
+      "XGBoost - F1-Measure stdev: 0.0054\n",
+      "XGBoost - Average Training Time: 1.2264 seconds\n",
       "\n"
      ]
     }
