--- a/Assignment_2 (1).ipynb
+++ b/Assignment_2 (1).ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "901c4732-a1b2-42fc-ac50-65915d0eb1ca",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "id": "9dfcc1ff-85d9-4e8f-a985-7f9bfa17d46b",
    "metadata": {},
    "outputs": [],
@@ -216,10 +216,13 @@
     "    ranks_matrix = results_df.iloc[:n, 1:].map(lambda x: int(x.split('(')[-1].strip(')'))).values\n",
     "    term3 = (1 / (n * (k - 1))) * np.sum((ranks_matrix - R_bar) ** 2)\n",
     "\n",
+    "    friedman_statistic = term2 / term3\n",
+    "\n",
     "    # Display results\n",
     "    print(f\"\\tR̅ = {R_bar:.4f}\")\n",
     "    print(f\"\\tN * Σj (Rj - R̅)^2 = {term2:.4f}\")\n",
     "    print(f\"\\t(1 / (n * (k - 1))) * Σij (Rij - Rj)^2 = {term3:.4f}\")\n",
+    "    print(f\"\\tFiedman statistic which is the ratio of the 2rd and 3nd terms = {term2:.4f}/{term3:.4f} = {friedman_statistic:.4f}\" )\n",
     "\n",
     "    # Update DataFrame with R_bar on the top bar\n",
     "    results_df.loc[-1] = [\"R_bar\"] + [f\"{R_bar:.4f}\"] * k\n",
@@ -231,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "b6cfb6f4-b9dd-4cb2-9a59-cbe8d18f737a",
    "metadata": {},
    "outputs": [
@@ -243,50 +246,50 @@
       "Cross-validatiaon results for Logistic Regression:\n",
       "\n",
       "Fold  Training Time (s)  Accuracy  F1 Score\n",
-      "   1           7.708267  0.915401  0.892562\n",
-      "   2           6.470413  0.923913  0.901961\n",
-      "   3           5.252463  0.932609  0.913165\n",
-      "   4           2.436608  0.936957  0.918768\n",
-      "   5           2.574459  0.913043  0.890110\n",
-      "   6           2.025614  0.936957  0.920110\n",
-      "   7           2.307599  0.934783  0.915730\n",
-      "   8           2.257733  0.932609  0.912676\n",
-      "   9           1.888202  0.936957  0.915452\n",
-      "  10           1.690878  0.915217  0.890141\n",
-      "Mean           3.461224  0.927844  0.907067\n",
-      " Std           2.175267  0.009952  0.012163\n",
+      "   1           1.010569  0.917570  0.895028\n",
+      "   2           1.037344  0.923913  0.901961\n",
+      "   3           1.171942  0.932609  0.913165\n",
+      "   4           0.998854  0.936957  0.918768\n",
+      "   5           0.917440  0.913043  0.890110\n",
+      "   6           0.838754  0.936957  0.920110\n",
+      "   7           1.139072  0.934783  0.915730\n",
+      "   8           0.931515  0.930435  0.909605\n",
+      "   9           0.783396  0.936957  0.915452\n",
+      "  10           1.107351  0.915217  0.890141\n",
+      "Mean           0.993624  0.927844  0.907007\n",
+      " Std           0.127347  0.009581  0.011743\n",
       "\n",
       "Cross-validatiaon results for Random Forest:\n",
       "\n",
       "Fold  Training Time (s)  Accuracy  F1 Score\n",
-      "   1           1.038184  0.952278  0.938889\n",
-      "   2           1.157561  0.956522  0.944134\n",
-      "   3           1.105014  0.960870  0.950000\n",
-      "   4           1.045902  0.967391  0.957983\n",
-      "   5           1.140928  0.945652  0.931129\n",
-      "   6           1.064623  0.956522  0.944134\n",
-      "   7           1.109998  0.958696  0.947368\n",
-      "   8           1.099326  0.956522  0.943820\n",
-      "   9           1.010538  0.941304  0.923513\n",
-      "  10           1.095241  0.952174  0.937500\n",
-      "Mean           1.086732  0.954793  0.941847\n",
-      " Std           0.046403  0.007443  0.009720\n",
+      "   1           0.485136  0.952278  0.938889\n",
+      "   2           0.483235  0.956522  0.944134\n",
+      "   3           0.488808  0.960870  0.950000\n",
+      "   4           0.482141  0.967391  0.957983\n",
+      "   5           0.537883  0.945652  0.931129\n",
+      "   6           0.463425  0.956522  0.944134\n",
+      "   7           0.466558  0.958696  0.947368\n",
+      "   8           0.465571  0.956522  0.943820\n",
+      "   9           0.477969  0.941304  0.923513\n",
+      "  10           0.475654  0.952174  0.937500\n",
+      "Mean           0.482638  0.954793  0.941847\n",
+      " Std           0.021308  0.007443  0.009720\n",
       "\n",
       "Cross-validatiaon results for XGBoost:\n",
       "\n",
       "Fold  Training Time (s)  Accuracy  F1 Score\n",
-      "   1           0.516781  0.945770  0.931507\n",
-      "   2           0.417670  0.958696  0.947075\n",
-      "   3           0.548938  0.958696  0.948229\n",
-      "   4           0.755157  0.960870  0.950000\n",
-      "   5           0.755996  0.954348  0.942779\n",
-      "   6           0.379176  0.956522  0.944444\n",
-      "   7           0.392000  0.950000  0.936288\n",
-      "   8           0.382564  0.958696  0.947945\n",
-      "   9           0.398891  0.958696  0.947075\n",
-      "  10           0.428070  0.945652  0.929178\n",
-      "Mean           0.497524  0.954794  0.942452\n",
-      " Std           0.147378  0.005666  0.007463\n"
+      "   1           0.114857  0.945770  0.931507\n",
+      "   2           0.117278  0.958696  0.947075\n",
+      "   3           0.121987  0.958696  0.948229\n",
+      "   4           0.116072  0.960870  0.950000\n",
+      "   5           0.128695  0.954348  0.942779\n",
+      "   6           0.116413  0.956522  0.944444\n",
+      "   7           0.113616  0.950000  0.936288\n",
+      "   8           0.113583  0.958696  0.947945\n",
+      "   9           0.122834  0.958696  0.947075\n",
+      "  10           0.114211  0.945652  0.929178\n",
+      "Mean           0.117955  0.954794  0.942452\n",
+      " Std           0.004982  0.005666  0.007463\n"
      ]
     }
    ],
@@ -307,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "b9f7b195-0eb3-437f-b031-be9a7ef4c6d6",
    "metadata": {},
    "outputs": [
@@ -319,14 +322,14 @@
       "F1 Score Comparison:\n",
       "\n",
       "    Fold Logistic Regression Random Forest    XGBoost\n",
-      "  Fold 1          0.8926 (3)    0.9389 (1) 0.9315 (2)\n",
+      "  Fold 1          0.8950 (3)    0.9389 (1) 0.9315 (2)\n",
       "  Fold 2          0.9020 (3)    0.9441 (2) 0.9471 (1)\n",
       "  Fold 3          0.9132 (3)    0.9500 (1) 0.9482 (2)\n",
       "  Fold 4          0.9188 (3)    0.9580 (1) 0.9500 (2)\n",
       "  Fold 5          0.8901 (3)    0.9311 (2) 0.9428 (1)\n",
       "  Fold 6          0.9201 (3)    0.9441 (2) 0.9444 (1)\n",
       "  Fold 7          0.9157 (3)    0.9474 (1) 0.9363 (2)\n",
-      "  Fold 8          0.9127 (3)    0.9438 (2) 0.9479 (1)\n",
+      "  Fold 8          0.9096 (3)    0.9438 (2) 0.9479 (1)\n",
       "  Fold 9          0.9155 (3)    0.9235 (2) 0.9471 (1)\n",
       " Fold 10          0.8901 (3)    0.9375 (1) 0.9292 (2)\n",
       "Avg Rank                3.00          1.50       1.50\n",
@@ -334,14 +337,14 @@
       "Accuracy Comparison:\n",
       "\n",
       "    Fold Logistic Regression Random Forest    XGBoost\n",
-      "  Fold 1          0.9154 (3)    0.9523 (1) 0.9458 (2)\n",
+      "  Fold 1          0.9176 (3)    0.9523 (1) 0.9458 (2)\n",
       "  Fold 2          0.9239 (3)    0.9565 (2) 0.9587 (1)\n",
       "  Fold 3          0.9326 (3)    0.9609 (1) 0.9587 (2)\n",
       "  Fold 4          0.9370 (3)    0.9674 (1) 0.9609 (2)\n",
       "  Fold 5          0.9130 (3)    0.9457 (2) 0.9543 (1)\n",
       "  Fold 6          0.9370 (3)    0.9565 (1) 0.9565 (2)\n",
       "  Fold 7          0.9348 (3)    0.9587 (1) 0.9500 (2)\n",
-      "  Fold 8          0.9326 (3)    0.9565 (2) 0.9587 (1)\n",
+      "  Fold 8          0.9304 (3)    0.9565 (2) 0.9587 (1)\n",
       "  Fold 9          0.9370 (3)    0.9413 (2) 0.9587 (1)\n",
       " Fold 10          0.9152 (3)    0.9522 (1) 0.9457 (2)\n",
       "Avg Rank                3.00          1.40       1.60\n",
@@ -349,16 +352,16 @@
       "Training Time (s) Comparison:\n",
       "\n",
       "    Fold Logistic Regression Random Forest    XGBoost\n",
-      "  Fold 1          7.7083 (3)    1.0382 (2) 0.5168 (1)\n",
-      "  Fold 2          6.4704 (3)    1.1576 (2) 0.4177 (1)\n",
-      "  Fold 3          5.2525 (3)    1.1050 (2) 0.5489 (1)\n",
-      "  Fold 4          2.4366 (3)    1.0459 (2) 0.7552 (1)\n",
-      "  Fold 5          2.5745 (3)    1.1409 (2) 0.7560 (1)\n",
-      "  Fold 6          2.0256 (3)    1.0646 (2) 0.3792 (1)\n",
-      "  Fold 7          2.3076 (3)    1.1100 (2) 0.3920 (1)\n",
-      "  Fold 8          2.2577 (3)    1.0993 (2) 0.3826 (1)\n",
-      "  Fold 9          1.8882 (3)    1.0105 (2) 0.3989 (1)\n",
-      " Fold 10          1.6909 (3)    1.0952 (2) 0.4281 (1)\n",
+      "  Fold 1          1.0106 (3)    0.4851 (2) 0.1149 (1)\n",
+      "  Fold 2          1.0373 (3)    0.4832 (2) 0.1173 (1)\n",
+      "  Fold 3          1.1719 (3)    0.4888 (2) 0.1220 (1)\n",
+      "  Fold 4          0.9989 (3)    0.4821 (2) 0.1161 (1)\n",
+      "  Fold 5          0.9174 (3)    0.5379 (2) 0.1287 (1)\n",
+      "  Fold 6          0.8388 (3)    0.4634 (2) 0.1164 (1)\n",
+      "  Fold 7          1.1391 (3)    0.4666 (2) 0.1136 (1)\n",
+      "  Fold 8          0.9315 (3)    0.4656 (2) 0.1136 (1)\n",
+      "  Fold 9          0.7834 (3)    0.4780 (2) 0.1228 (1)\n",
+      " Fold 10          1.1074 (3)    0.4757 (2) 0.1142 (1)\n",
       "Avg Rank                3.00          2.00       1.00\n"
      ]
     }
@@ -372,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "id": "ef8781ae-cb1a-48c4-b6f0-69f2c0d6ab4c",
    "metadata": {},
    "outputs": [
@@ -385,16 +388,19 @@
       "\tR̅ = 2.0000\n",
       "\tN * Σj (Rj - R̅)^2 = 15.0000\n",
       "\t(1 / (n * (k - 1))) * Σij (Rij - Rj)^2 = 1.0000\n",
+      "\tFiedman statistic which is the ratio of the 2rd and 3nd terms = 15.0000/1.0000 = 15.0000\n",
       "\n",
       "Fiedman statistic calculation with metric:Accuracy\n",
       "\tR̅ = 2.0000\n",
       "\tN * Σj (Rj - R̅)^2 = 15.2000\n",
       "\t(1 / (n * (k - 1))) * Σij (Rij - Rj)^2 = 1.0000\n",
+      "\tFiedman statistic which is the ratio of the 2rd and 3nd terms = 15.2000/1.0000 = 15.2000\n",
       "\n",
       "Fiedman statistic calculation with metric:Training Time (s)\n",
       "\tR̅ = 2.0000\n",
       "\tN * Σj (Rj - R̅)^2 = 20.0000\n",
-      "\t(1 / (n * (k - 1))) * Σij (Rij - Rj)^2 = 1.0000\n"
+      "\t(1 / (n * (k - 1))) * Σij (Rij - Rj)^2 = 1.0000\n",
+      "\tFiedman statistic which is the ratio of the 2rd and 3nd terms = 20.0000/1.0000 = 20.0000\n"
      ]
     }
    ],
