--- a/Assignment_2_code.ipynb
+++ b/Assignment_2_code.ipynb
@@ -78,9 +78,9 @@
    "id": "6456e297-711e-46e9-a525-d432da801711",
    "metadata": {},
    "source": [
-    "Following three helper functions is used to \n",
+    "The following three helper functions are used to \n",
     "- Perform Stratified k-fold  \n",
-    "- F1 score comparison \n",
+    "- Metric comparison \n",
     "- Average rank statistics to find the Friedman statistic\\n \n"
    ]
   },
@@ -190,8 +190,6 @@
     "    print(results_df.to_string(index=False))\n",
     "\n",
     "    return results_df\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "def calculate_rank_statistics(results_df, metric_name):\n",
