--- a/Experimental Comparison of Learning Algorithms for Spam Detection.ipynb
+++ b/Experimental Comparison of Learning Algorithms for Spam Detection.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "044e6f4d-b23d-42e2-aaa4-c22656d77e91",
+   "metadata": {},
+   "source": [
+    "# Prepared by Kidus Mikael Birhanu and Bokhtir Mehedy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "190fed90-9e8a-485b-a833-f0db7c04b633",
    "metadata": {},
    "source": [
@@ -10,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "901c4732-a1b2-42fc-ac50-65915d0eb1ca",
    "metadata": {},
    "outputs": [
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "9dfcc1ff-85d9-4e8f-a985-7f9bfa17d46b",
    "metadata": {},
    "outputs": [],
@@ -239,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "b6cfb6f4-b9dd-4cb2-9a59-cbe8d18f737a",
    "metadata": {},
    "outputs": [
@@ -251,50 +259,50 @@
       "Cross-validatiaon results for Logistic Regression:\n",
       "\n",
       "Fold  Training Time (s)  Accuracy  F1 Score\n",
-      "   1           3.998265  0.917570  0.895028\n",
-      "   2           4.226130  0.923913  0.901961\n",
-      "   3           6.156433  0.932609  0.913165\n",
-      "   4           3.926541  0.936957  0.918768\n",
-      "   5           3.548844  0.913043  0.890110\n",
-      "   6           3.880666  0.936957  0.920110\n",
-      "   7           4.809063  0.934783  0.915730\n",
-      "   8           3.740062  0.930435  0.909605\n",
-      "   9           2.888073  0.936957  0.915452\n",
-      "  10           4.568816  0.915217  0.890141\n",
-      "Mean           4.174289  0.927844  0.907007\n",
-      " Std           0.875775  0.009581  0.011743\n",
+      "   1           4.289362  0.917570  0.895028\n",
+      "   2           4.022108  0.923913  0.901961\n",
+      "   3           4.056531  0.932609  0.913165\n",
+      "   4           3.723740  0.936957  0.918768\n",
+      "   5           3.222856  0.913043  0.890110\n",
+      "   6           3.237307  0.936957  0.920110\n",
+      "   7           4.533418  0.934783  0.915730\n",
+      "   8           3.323907  0.930435  0.909605\n",
+      "   9           2.893646  0.936957  0.915452\n",
+      "  10           4.885498  0.915217  0.890141\n",
+      "Mean           3.818837  0.927844  0.907007\n",
+      " Std           0.647298  0.009581  0.011743\n",
       "\n",
       "Cross-validatiaon results for Random Forest:\n",
       "\n",
       "Fold  Training Time (s)  Accuracy  F1 Score\n",
-      "   1           3.727035  0.952278  0.938889\n",
-      "   2           3.686904  0.956522  0.944134\n",
-      "   3           2.803832  0.960870  0.950000\n",
-      "   4           3.336029  0.967391  0.957983\n",
-      "   5           3.956414  0.945652  0.931129\n",
-      "   6           2.648351  0.956522  0.944134\n",
-      "   7           2.545018  0.958696  0.947368\n",
-      "   8           2.875391  0.956522  0.943820\n",
-      "   9           2.802648  0.941304  0.923513\n",
-      "  10           2.270042  0.952174  0.937500\n",
-      "Mean           3.065166  0.954793  0.941847\n",
-      " Std           0.571747  0.007443  0.009720\n",
+      "   1           2.186270  0.952278  0.938889\n",
+      "   2           2.123879  0.956522  0.944134\n",
+      "   3           2.066652  0.960870  0.950000\n",
+      "   4           2.024529  0.967391  0.957983\n",
+      "   5           2.044070  0.945652  0.931129\n",
+      "   6           2.084057  0.956522  0.944134\n",
+      "   7           1.864503  0.958696  0.947368\n",
+      "   8           2.000755  0.956522  0.943820\n",
+      "   9           2.180032  0.941304  0.923513\n",
+      "  10           1.598438  0.952174  0.937500\n",
+      "Mean           2.017318  0.954793  0.941847\n",
+      " Std           0.174203  0.007443  0.009720\n",
       "\n",
       "Cross-validatiaon results for XGBoost:\n",
       "\n",
       "Fold  Training Time (s)  Accuracy  F1 Score\n",
-      "   1           1.007967  0.945770  0.931507\n",
-      "   2           0.438933  0.958696  0.947075\n",
-      "   3           0.413309  0.958696  0.948229\n",
-      "   4           0.436984  0.960870  0.950000\n",
-      "   5           0.437063  0.954348  0.942779\n",
-      "   6           0.429228  0.956522  0.944444\n",
-      "   7           0.419464  0.950000  0.936288\n",
-      "   8           0.483608  0.958696  0.947945\n",
-      "   9           0.473022  0.958696  0.947075\n",
-      "  10           0.476989  0.945652  0.929178\n",
-      "Mean           0.501657  0.954794  0.942452\n",
-      " Std           0.179567  0.005666  0.007463\n"
+      "   1           1.036916  0.945770  0.931507\n",
+      "   2           0.522448  0.958696  0.947075\n",
+      "   3           0.752294  0.958696  0.948229\n",
+      "   4           0.610960  0.960870  0.950000\n",
+      "   5           0.486319  0.954348  0.942779\n",
+      "   6           0.534854  0.956522  0.944444\n",
+      "   7           0.572917  0.950000  0.936288\n",
+      "   8           0.476381  0.958696  0.947945\n",
+      "   9           0.510523  0.958696  0.947075\n",
+      "  10           0.615037  0.945652  0.929178\n",
+      "Mean           0.611865  0.954794  0.942452\n",
+      " Std           0.170043  0.005666  0.007463\n"
      ]
     }
    ],
@@ -323,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "id": "b9f7b195-0eb3-437f-b031-be9a7ef4c6d6",
    "metadata": {},
    "outputs": [
@@ -365,17 +373,17 @@
       "Training Time (s) Comparison:\n",
       "\n",
       "    Fold Logistic Regression Random Forest    XGBoost\n",
-      "  Fold 1          3.9983 (3)    3.7270 (2) 1.0080 (1)\n",
-      "  Fold 2          4.2261 (3)    3.6869 (2) 0.4389 (1)\n",
-      "  Fold 3          6.1564 (3)    2.8038 (2) 0.4133 (1)\n",
-      "  Fold 4          3.9265 (3)    3.3360 (2) 0.4370 (1)\n",
-      "  Fold 5          3.5488 (2)    3.9564 (3) 0.4371 (1)\n",
-      "  Fold 6          3.8807 (3)    2.6484 (2) 0.4292 (1)\n",
-      "  Fold 7          4.8091 (3)    2.5450 (2) 0.4195 (1)\n",
-      "  Fold 8          3.7401 (3)    2.8754 (2) 0.4836 (1)\n",
-      "  Fold 9          2.8881 (3)    2.8026 (2) 0.4730 (1)\n",
-      " Fold 10          4.5688 (3)    2.2700 (2) 0.4770 (1)\n",
-      "Avg Rank                2.90          2.10       1.00\n"
+      "  Fold 1          4.2894 (3)    2.1863 (2) 1.0369 (1)\n",
+      "  Fold 2          4.0221 (3)    2.1239 (2) 0.5224 (1)\n",
+      "  Fold 3          4.0565 (3)    2.0667 (2) 0.7523 (1)\n",
+      "  Fold 4          3.7237 (3)    2.0245 (2) 0.6110 (1)\n",
+      "  Fold 5          3.2229 (3)    2.0441 (2) 0.4863 (1)\n",
+      "  Fold 6          3.2373 (3)    2.0841 (2) 0.5349 (1)\n",
+      "  Fold 7          4.5334 (3)    1.8645 (2) 0.5729 (1)\n",
+      "  Fold 8          3.3239 (3)    2.0008 (2) 0.4764 (1)\n",
+      "  Fold 9          2.8936 (3)    2.1800 (2) 0.5105 (1)\n",
+      " Fold 10          4.8855 (3)    1.5984 (2) 0.6150 (1)\n",
+      "Avg Rank                3.00          2.00       1.00\n"
      ]
     }
    ],
@@ -388,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "id": "ef8781ae-cb1a-48c4-b6f0-69f2c0d6ab4c",
    "metadata": {},
    "outputs": [
@@ -411,9 +419,9 @@
       "\n",
       "Friedman statistic calculation with metric:Training Time (s)\n",
       "\tR̅ = 2.0000\n",
-      "\tN * Σj (Rj - R̅)^2 = 18.2000\n",
+      "\tN * Σj (Rj - R̅)^2 = 20.0000\n",
       "\t(1 / (n * (k - 1))) * Σij (Rij - Rj)^2 = 1.0000\n",
-      "\tFriedman statistic which is the ratio of the 2nd and 3nd terms = 18.2000/1.0000 = 18.2000\n"
+      "\tFriedman statistic which is the ratio of the 2nd and 3nd terms = 20.0000/1.0000 = 20.0000\n"
      ]
     }
    ],
@@ -617,14 +625,6 @@
     "\n",
     "***from the above Nemenyi test we conduct for Training time we can conclude that Logistic Regression and XGBoost are preforming significantly different from each other***\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "474d4697-9e5d-4f76-9d4f-502cf8ad7eb7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
